Add input label and clean some scripts

--- a/w2v.ipynb
+++ b/w2v.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import gensim\n",
@@ -13,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = gensim.models.KeyedVectors.load_word2vec_format('./model/GoogleNews-vectors-negative300.bin', binary=True)"
@@ -49,197 +53,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "word_list = ['hi', 'bye', ['abusive', 'control'], 'boy', 'anxiety', 'assault', ['rape', 'them']]\n",
-    "w2v = np.zeros([len(word_list), 6, 300])\n",
-    "\n",
-    "c1 = 0\n",
-    "for word in word_list:\n",
-    "    x = np.zeros([6, 300])\n",
-    "    if type(word) == list:\n",
-    "        c2 = 0\n",
-    "        for w in word:\n",
-    "            x[c2] = model[w]\n",
-    "            c2 += 1\n",
-    "    elif type(word) == str:\n",
-    "        x[0] = model[word]\n",
-    "    w2v[c1] = x\n",
-    "    c1 += 1\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[-0.16503906  0.20410156  0.13085938 ... -0.39257812 -0.19238281\n",
-      "    0.05786133]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]]\n",
-      "\n",
-      " [[-0.03027344  0.06542969  0.09228516 ... -0.56640625 -0.0062561\n",
-      "    0.15136719]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]]\n",
-      "\n",
-      " [[-0.38476562 -0.04956055 -0.03125    ... -0.00086212 -0.12890625\n",
-      "    0.16894531]\n",
-      "  [ 0.14941406  0.06738281 -0.09277344 ...  0.01977539 -0.171875\n",
-      "   -0.11279297]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[ 0.25        0.09863281 -0.2265625  ...  0.22363281  0.16796875\n",
-      "   -0.02893066]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]]\n",
-      "\n",
-      " [[ 0.21777344  0.06176758  0.14355469 ... -0.13574219  0.02099609\n",
-      "    0.10644531]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]]\n",
-      "\n",
-      " [[ 0.02990723  0.21386719  0.30273438 ... -0.07177734  0.03112793\n",
-      "    0.11230469]\n",
-      "  [ 0.03491211  0.08496094  0.0625     ... -0.01904297 -0.00891113\n",
-      "    0.02209473]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]\n",
-      "  [ 0.          0.          0.         ...  0.          0.\n",
-      "    0.        ]]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(w2v)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = np.zeros([6, 300])\n",
-    "x[2:x.shape[0], :].shape\n",
-    "type(word_list[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hi\n",
-      "bye\n",
-      "abusive\n",
-      "control\n",
-      "boy\n",
-      "anxiety\n",
-      "assault\n",
-      "rape\n",
-      "them\n"
-     ]
-    }
-   ],
-   "source": [
-    "for word in word_list:\n",
-    "    x = np.zeros([6, 300])\n",
-    "    if type(word) == list:\n",
-    "        for w in word:\n",
-    "            print(w)\n",
-    "    elif type(word) == str:\n",
-    "        print(word)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## prepare data for training\n",
     "\n",
     "# read semi-clean data\n",
     "import pandas as pd\n",
-    "doc_complete = pd.read_csv('/Users/kenalo37/hackfest/behavior.csv')\n",
+    "doc_complete = pd.read_csv('~/Data/behavior.csv')\n",
     "doc_complete = list(doc_complete.iloc[:,1])\n",
     "\n",
+    "# Read data and remove numbers and empty strings\n",
     "doc = [d.split(' ') for d in doc_complete]\n",
     "for i in range(len(doc)):\n",
     "    temp = [x for x in doc[i] if x!= '' and x.isalpha()]\n",
-    "    doc[i] = temp\n",
-    "\n",
+    "    doc[i] = temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "from nltk.corpus import stopwords\n",
     "from nltk.stem.wordnet import WordNetLemmatizer\n",
     "import string\n",
+    "\n",
+    "# Build Lemmatizer\n",
     "stop = set(stopwords.words('english'))\n",
     "exclude = set(string.punctuation)\n",
     "lemma = WordNetLemmatizer()\n",
@@ -251,6 +97,7 @@
     "    normalized = \" \".join(lemma.lemmatize(word) for word in punc_free.split())\n",
     "    return normalized\n",
     "\n",
+    "# Lemmatize and clean data\n",
     "lemmatized_list = []\n",
     "for d in doc:\n",
     "    assert type(d) == list\n",
@@ -655,9 +502,12 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "# Run word_list into an input volume\n",
     "def input_volume(word_list, timesteps):\n",
     "    w2v = np.zeros([len(word_list), timesteps, 300])\n",
     "    c1 = 0\n",
@@ -681,7 +531,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "input_vol = input_volume(lemmatized_list, 6)"
@@ -690,7 +542,9 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.save('input_vol', input_vol)"
@@ -699,12 +553,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
