Short script to randomize input

--- a/InputLabel.ipynb
+++ b/InputLabel.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -918,29 +919,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.,  0.,  0.,  0.],\n",
-       "       [ 1.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.,  0.],\n",
-       "       ..., \n",
-       "       [ 0.,  0.,  1.,  0.],\n",
-       "       [ 1.,  0.,  0.,  0.],\n",
-       "       [ 1.,  0.,  0.,  0.]])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_label = df.iloc[:, -4:]\n",
-    "np.save('df_label', df_label)"
+    "np.save('input_label', df_label)"
    ]
   },
   {
